--- a/style.css
+++ b/style.css
@@ -1,45 +1,12 @@
- p {
-    text-align:  start;
-    text-decoration: red;
- }
- h1 {
+h1 {
     text-align: center;
-    text-decoration: wavy underline;
- }
- h1 {
-    color: brown;
-    text-decoration: red underline;
- }
- button {
-    background-color: gold;
-    color: blue;
+    text-transform: capitalize;
+    font-family: 'Times New Roman';
 }
-a {
-    text-decoration: green wavy dotted underline
+#outer {
+    font-size: 20px;
 }
-#h1
+#inner
 {
-    font-weight: normal;
+    font-size: 10px;
 }
-h2{
- font-weight: lighter;
-}
-h3 {
-    font: weight 400px;
-}
-#one
-{
-    font-family:Arial;
-    font-size: 25px;
-    line-height: normal;
-    text-transform: uppercase;
-
-
-}
-#two
-{
-    font-family: 'Segoe UI', sans-serif, 'Segoe UI Emoji', 'Segoe UI Symbol';
-
-;
-}
- 
