--- a/style.css
+++ b/style.css
@@ -1,12 +1,5 @@
-h1 {
-    text-align: center;
-    text-transform: capitalize;
-    font-family: 'Times New Roman';
-}
-#outer {
-    font-size: 20px;
-}
-#inner
-{
-    font-size: 10px;
+div {
+    border: 100px;
+    height: 100px;
+    s
 }
