--- a/7.css
+++ b/7.css
@@ -3,20 +3,36 @@ div {
     width: 100px;
     background-color: pink;
     border: 2px solid;
+    position: absolute;
+    top: 100px;
+    left: 100px;
+    animation-name:colorAnimate;
+    animation-duration: 1s;
+    /* animation-timing-function: ease-in; */
+    animation-delay: 1s;
+    animation-iteration-count: infinite;
     /* transition-property: all;
     transition-duration: 2s;
     transition-timing-function:ease-in;
     transition-delay: 1s; */
-    transition:all 2s ease-in 1s;
-
-
-
-
+    /* transition:all 2s ease-in 1s; */
+    /* rotate: z 180deg;  */
+    /* transform:scaleX(2); */
 }
+    
+
+@keyframes colorAnimate {
+    from {background-color: aquamarine;}
+    to {background-color: red;}
+}
+
+
+
 div:hover {
-    background-color: blue;
+    /* background-color: blue;
     color: red;
-    font-size: 50px;
+    font-size: 50px; */
+    transform:translateY(50px)
 }
 div:active {
     background-color: green;
