--- a/7.css
+++ b/7.css
@@ -1,20 +1,26 @@
 div {
     height: 100px;
     width: 100px;
+    border-radius: 50%;
     background-color: pink;
     border: 2px solid;
     position: absolute;
     top: 100px;
     left: 100px;
-    animation-name:colorAnimate;
+    /* animation-name:colorAnimate;
     animation-duration: 1s;
     /* animation-timing-function: ease-in; */
-    animation-delay: 1s;
+
+    /* animation-delay: 1s;
     animation-iteration-count: infinite;
+    animation-direction: reverse; */
+    animation: colorAnimate 2s ease-in 3s infinite normal;
+
+
     /* transition-property: all;
     transition-duration: 2s;
     transition-timing-function:ease-in;
-    transition-delay: 1s; */
+    transition-delay: 1s; *;/
     /* transition:all 2s ease-in 1s; */
     /* rotate: z 180deg;  */
     /* transform:scaleX(2); */
@@ -24,6 +30,12 @@ div {
 @keyframes colorAnimate {
     from {background-color: aquamarine;}
     to {background-color: red;}
+    from {left:0px;}
+    to {left:200px;}
+    50% {
+        background-color: blue;
+        left: 200px;
+    }
 }
 
 
